--- a/css/Website.css
+++ b/css/Website.css
@@ -33,6 +33,8 @@
 nav{
 	background-image: url("../Img/Rusticwood.jpg");
 	background-size: cover;
+	width: 100%;
+
 }
 
 ul{
@@ -40,12 +42,17 @@ ul{
 	font-size: 25px;
 	text-shadow: 2px 2px black;
 	color: black !important;
+	margin-right: 10px;
+	list-style-type: none;
+}
+ol{
+	list-style-type: none;
 }
 
 h1{
 	font-family: "quentin" !important;
 	text-align: center;
-	margin-bottom: 25px;
+	margin-bottom: 40px;
 	text-shadow: 2px 2px darkgrey;
 }
 
@@ -54,61 +61,153 @@ h1{
 	font-family: "durango";
 }
 
-body{
-	background-image: url("../img/Western Background.jpg");
+#home{/*background images*/
+	background-image: url("../img/Background.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: "quentin";
+	width: 100%;
+}
 
+#about{
+	background-image: url("../img/duoplayingb&w.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-family: "quentin";
+	width: 100%;
+}
+
+#media{
+	background-image: url("../img/rusticwood.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-family: "quentin";
+	width: 100%;
+}
+
+#events{
+	background-image: url("../img/philstretch.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-family: "quentin";
+	width: 100%;
+}
+
+
+#contact{
+	background-image: url("../img/duopickup2.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	font-family: "quentin";
+	width: 100%;
 }
 
 p{
 	font-size: 30px;
-	color: #000;
+	color: #000;/*used hexadecimal colours to show I understand other ways of selceting colours*/
 	font-family: "oldtown";
+	margin: 10px;
 }
 
 .footer{
-	width: 100%;
+	position: absolute;
 	display: flex;
 	font-size: 25px;
 	font-family: "durango";
 	justify-content: center;
 	background-image: url("../Img/Rusticwood.jpg");
 	background-size: cover;
-	border-top: 2px solid;
+	border-top: 2px solid black;
 	text-shadow: 2px 2px black;
 	color: grey;
 }
 
-ol{
-	list-style-type: none;
-}
-.container{
+.container{/*default container styling*/
 	background-image:url("../Img/rusticwood.jpg");
 	border-radius: 10px;
 	background-size: cover;
 	background-repeat: no-repeat;
-	padding: 10px;
+	filter: opacity(.9);
+}
+
+.container1{/*Container used in about us section*/
+	background-image:url("../Img/rusticwood.jpg");
+	border-radius: 10px;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.contactus{
+	top: 125px;
 }
 
 button{
 	margin-top: 25px !important;
 	margin-bottom: 25px !important;
 	box-shadow: 2px 2px black;
-
 }
 
-#heading-div{
-	background-color: #fff;
-	border-radius: 15px;
-}
-
-span{
+span{/*selecting the smaller sized font on the home page*/
 	font-size: 25px;
 }
 
-div{
-	margin: 10px;
+
+
+.aboutcontainer{/*about page, header container*/
+	top: 50px;
 }
+
+.aboutus0{
+	margin-top: 10px;
+	margin-bottom: 15px;
+}
+
+.aboutus1{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	transform: rotate( 4deg);
+}
+
+.aboutus2{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	transform: rotate( -4deg);
+}
+
+#aboutpic2{
+	float: right;
+	display: block;
+	content: url("../Img/philsteel.jpg");
+	height: 70%;
+	width: 80%;
+	border: 2px solid;
+}
+
+#aboutpic1{
+	float: right;
+	display: block;
+	content:url("../img/stretch1.jpg"); 
+	height: 70%;
+	width: 80%;
+	border: 2px solid;
+}
+
+.eventsmapcontainer{
+	margin-top: 220px;
+}
+
+.map{
+	float: right;
+	display: block;
+	margin: 15px;
+}
+
+#bookUsLink{
+	color:rgb(255,255,255,0);
+}
+
+#copyright{
+	font-family: "Times New Roman";/* this allows for the copyright C to be displayed as the character wasnt supported by my custom font*/
+}
+
 
