--- a/css/Website.css
+++ b/css/Website.css
@@ -104,7 +104,7 @@ h1{
 
 p{
 	font-size: 30px;
-	color: #000;/*used hexadecimal colours to show I understand other ways of selceting colours*/
+	color: #fff;
 	font-family: "oldtown";
 	margin: 10px;
 }
@@ -178,7 +178,7 @@ span{/*selecting the smaller sized font on the home page*/
 	float: right;
 	display: block;
 	content: url("../Img/philsteel.jpg");
-	height: 70%;
+	
 	width: 80%;
 	border: 2px solid;
 }
@@ -187,7 +187,6 @@ span{/*selecting the smaller sized font on the home page*/
 	float: right;
 	display: block;
 	content:url("../img/stretch1.jpg"); 
-	height: 70%;
 	width: 80%;
 	border: 2px solid;
 }
@@ -205,6 +204,19 @@ span{/*selecting the smaller sized font on the home page*/
 #bookUsLink{
 	color:rgb(255,255,255,0);
 }
+
+#Video{
+	margin: 10px;
+}
+
+@media only screen and (min-width: 1920) {
+	#aboutpic1{width: 60%
+}
+
+.header1{
+	display: none;
+}
+
 
 #copyright{
 	font-family: "Times New Roman";/* this allows for the copyright C to be displayed as the character wasnt supported by my custom font*/
