--- a/css/Website.css
+++ b/css/Website.css
@@ -22,7 +22,10 @@
 	url("../Fonts/OldTown.woff") format("woff"),
 	url("../Fonts/OldTown.ttf") format("truetype");
 }
-
+.navcontainer{
+	margin-left: 30px;
+	margin-right: 30px;
+}
 .navbar-brand{
 	font-size: 38px !important; /*using "!important" I felt was quicker way to overpower Bootstraps styling*/
 	font-family: "durango";
@@ -52,13 +55,8 @@ ol{
 h1{
 	font-family: "quentin" !important;
 	text-align: center;
-	margin-bottom: 40px;
 	text-shadow: 2px 2px darkgrey;
-}
-
-.WantedHeading{
-	font-size: 50px !important;
-	font-family: "durango";
+	color: black !important;
 }
 
 #home{/*background images*/
@@ -103,23 +101,15 @@ h1{
 }
 
 p{
-	font-size: 30px;
+	font-size: 25px;
 	color: #fff;
+	text-shadow: black 2px 2px;
 	font-family: "oldtown";
 	margin: 10px;
-}
-
-.footer{
-	position: absolute;
-	display: flex;
-	font-size: 25px;
-	font-family: "durango";
-	justify-content: center;
-	background-image: url("../Img/Rusticwood.jpg");
-	background-size: cover;
-	border-top: 2px solid black;
-	text-shadow: 2px 2px black;
-	color: grey;
+	padding: 10px;
+	background-color:rgb(63, 63, 63);
+	border: 2px solid black;
+	filter: opacity(.8);
 }
 
 .container{/*default container styling*/
@@ -127,86 +117,138 @@ p{
 	border-radius: 10px;
 	background-size: cover;
 	background-repeat: no-repeat;
-	filter: opacity(.9);
 }
 
-.container1{/*Container used in about us section*/
+.container1{/*Container, transverse version of rustic wood image*/
+	background-image:url("../Img/rusticwood180deg.jpg");
+	border-radius: 10px;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+span{/*selecting the smaller sized font on the homepage header*/
+	font-size: 25px;
+}
+
+.aboutus0{/*heading div on the about page*/
+	margin-top: 10px;
+	margin-bottom: 15px;
+}
+
+.aboutus1{
+	transform: rotate( 2deg);
+}
+
+.aboutus2{
+	transform: rotate( -2deg);
+}
+
+#aboutpic1{
+	margin-top: 0px;
+	margin-bottom: 10px;
+	float: right;
+	display: inline-block;
+	content:url("../img/stretch1.jpg"); 
+	width: 50%;
+}
+
+#aboutpic2{
+	margin-top: 0px;
+	margin-bottom: 10px;
+	float: left;
+	display: inline-block;
+	content: url("../Img/philsteel.jpg");
+	width: 50%;
+}
+.aboutdivheader{
+	margin: 15px 0px 30px 0px;
+}	
+
+.aboutmedia{
+	background-image: url("../Img/Rusticwood.jpg");
+	background-size: cover;
+	margin-top: 20px;
+	width: 100%;
+}
+
+
+.sepia{
+	-webkit-filter: sepia(0.1);
+}
+.sepia1{
+	-webkit-filter: sepia(0.2);
+}
+.sepia2{
+	-webkit-filter: sepia(0.3);
+}
+.sepia3{
+	-webkit-filter: sepia(0.4);
+}
+.sepia4{
+	-webkit-filter: sepia(0.5);
+}
+.sepia5{
+	-webkit-filter: sepia(0.6);
+}
+.sepia6{
+	-webkit-filter: sepia(0.7);
+}
+.sepia7{
+	-webkit-filter: sepia(0.9);
+}
+.sepia8{
+	-webkit-filter: sepia(1);
+}
+
+.aboutdiv1{
+	float: right;
+	position: relative;
+	display: inline-block;
+	margin: 0px 0px 10px 0px;
+}
+
+.aboutdiv2{
+	float: right;
+	position: relative;
+	display: inline-block;
+	margin: 0px 0px 50px 0px;
+}
+
+.eventsmapcontainer{
+	margin-top: 100px;
 	background-image:url("../Img/rusticwood.jpg");
 	border-radius: 10px;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
-.contactus{
-	top: 125px;
-}
-
-button{
-	margin-top: 25px !important;
-	margin-bottom: 25px !important;
-	box-shadow: 2px 2px black;
-}
-
-span{/*selecting the smaller sized font on the home page*/
-	font-size: 25px;
-}
-
-
-
-.aboutcontainer{/*about page, header container*/
-	top: 50px;
-}
-
-.aboutus0{
-	margin-top: 10px;
-	margin-bottom: 15px;
-}
-
-.aboutus1{
-	margin-top: 0px;
-	margin-bottom: 0px;
-	transform: rotate( 4deg);
-}
-
-.aboutus2{
-	margin-top: 0px;
-	margin-bottom: 0px;
-	transform: rotate( -4deg);
-}
-
-#aboutpic2{
-	float: right;
-	display: block;
-	content: url("../Img/philsteel.jpg");
-	
-	width: 80%;
-	border: 2px solid;
-}
-
-#aboutpic1{
-	float: right;
-	display: block;
-	content:url("../img/stretch1.jpg"); 
-	width: 80%;
-	border: 2px solid;
-}
-
-.eventsmapcontainer{
-	margin-top: 300px;
-}
-
 .map{
-	float: right;
-	display: block;
-	margin: 15px;
+	display: inline-block;
+	position: relative;
+	float: left;
+	padding-bottom: 20px;
+	margin: 1px;
+	height: 25%;
+	width: 50%;
+	
+}
+.mapdiv{
+	display: inline-block;
+	margin: 15px 0px 100px 0px;
+	float: right; 
+	position: relative;
+
 }
 
 #bookUsLink{
-	color:rgb(255,255,255,0);
+	color:rgb(255,255,255);/*showing another way of changing colours*/
 }
-
+.VideosHeader{
+	bottom-margin: 50px;
+}
 #Video{
-	margin: 10px;
+	padding: 1px;
+	margin: 0px 0px 100px 0px;
 }
 
 .header1{
@@ -215,27 +257,63 @@ span{/*selecting the smaller sized font on the home page*/
 
 #facebooklink{
 	display: block;
-	content:url("../img/fb.png");
+	content:url("../img/FB.png");
+	background-image: url("../Img/Rusticwood.jpg");
+	background-size: cover;
+	margin-top: 20px;
+	width: 100%;
 	width: 100px;
 	margin: 2px;
-	padding: 2px;
+	padding: 10px;
 }
 
 #copyright{
 	font-family: "Times New Roman";/* this allows for the copyright C to be displayed as the character wasnt supported by my custom font*/
 }
+.contactus{
+	top: 125px;
+}
 
-@media only screen and (min-width: 400px) {
-	nav {
-		position: fixed;
+button{
+	box-shadow: 2px 2px black;
+}
+
+.footer{
+	position:;
+	font-size: 25px;
+	font-family: "durango";
+	text-align: center;
+	background-image: url("../Img/Rusticwood180deg.jpg");
+	background-size: cover;
+	border-top: 2px solid black;
+	text-shadow: 2px 2px black;
+	color: grey;
+}
+
+.creditsBtn{
+	display: flex;
+	justify-content: flex-start;
+}
+
+
+@media only screen and (max-width: 1200px) {/*if screen size is below 1200 change*/
+
+	p{
+		font-size: 20px;
+	}
+	
+	#aboutpic1{
+		float: left;
+		width: 100%;
+	}
+	#aboutpic2{
+		float: left;
+		width: 100%;
 	}
 
-	body{
-		background-image: url("../img/duoplayingb&w.jpg");
+	.map{
+		width: 100%;
 	}
-	footer{
-		position: absolute;
 
-	}
 }
 
